OpenGL depth picking - Bones with constraint need two RMB to be selected #50932

Closed
opened 2017-03-12 20:33:39 +01:00 by YAFU · 5 comments

System Information
Kubuntu 16.04 (inte HD4000l)
Kubuntu 14.04 (nvidia GTX 960)

OpenGL Kubuntu 14.04.txt
OpenGL Kubuntu 16.04.txt

Blender Version
Broken: master, buildbot 76015f98ae

Short description of error
In armatures with X-Ray behind a mesh, bones containing a constraint are not selected at the first RMB click. If you zoomed in, you need RMB twice to be able to select the bone that contains the constraint. And if it is too zoom out, also sometimes the mesh is selected instead of the armature/bone.

*Clarification regarding the mentioned in IRC, the problem also happens in nvidia.

Blend file:
untitled.blend

Video:
2017-03-12.mkv

Edit / Update:
The problem occurs without the need of a mesh and without X-Ray

Exact steps for others to reproduce the error
From the preferences select OpenGL depth picking. Open .blend file and try to select the bone containing constraint.

**System Information** Kubuntu 16.04 (inte HD4000l) Kubuntu 14.04 (nvidia GTX 960) [OpenGL Kubuntu 14.04.txt](https://archive.blender.org/developer/F507908/OpenGL_Kubuntu_14.04.txt) [OpenGL Kubuntu 16.04.txt](https://archive.blender.org/developer/F507909/OpenGL_Kubuntu_16.04.txt) **Blender Version** Broken: master, buildbot 76015f98ae **Short description of error** In armatures with X-Ray behind a mesh, bones containing a constraint are not selected at the first RMB click. If you zoomed in, you need RMB twice to be able to select the bone that contains the constraint. And if it is too zoom out, also sometimes the mesh is selected instead of the armature/bone. *Clarification regarding the mentioned in IRC, the problem also happens in nvidia. Blend file: [untitled.blend](https://archive.blender.org/developer/F507910/untitled.blend) Video: [2017-03-12.mkv](https://archive.blender.org/developer/F507911/2017-03-12.mkv) Edit / Update: The problem occurs without the need of a mesh and without X-Ray **Exact steps for others to reproduce the error** From the preferences select OpenGL depth picking. Open .blend file and try to select the bone containing constraint.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @YAFU

Added subscriber: @YAFU

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by 810982a95c

This issue was referenced by 810982a95c950610fe10b6d17f919c8eed91782f
Author

This is working now.
I think that with 'OpenGL depth picking' it's going to be the first time I'll be able to use Blender with intel on Linux.
Thank you!

This is working now. I think that with 'OpenGL depth picking' it's going to be the first time I'll be able to use Blender with intel on Linux. Thank you!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50932
No description provided.