Fix T50932: depth picking w/ pose-bone constraints